update index links to database

--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -58,7 +58,7 @@ $cols = [
                     <li><a href="/docs/client/account<?php echo $this->escape($clientSDK); ?>">Account</a></li>
                     <li><a href="/docs/server/users<?php echo $this->escape($serverSDK); ?>">Users</a></li>
                     <li><a href="/docs/client/teams<?php echo $this->escape($clientSDK); ?>">Teams</a></li>
-                    <li><a href="/docs/client/database<?php echo $this->escape($clientSDK); ?>">Database</a></li>
+                    <li><a href="/docs/client/databases<?php echo $this->escape($clientSDK); ?>">Databases</a></li>
                     <li><a href="/docs/client/storage<?php echo $this->escape($clientSDK); ?>">Storage</a></li>
                     <li><a href="/docs/client/functions<?php echo $this->escape($serverSDK); ?>">Functions</a></li>
                     <li><a href="/docs/client/locale<?php echo $this->escape($clientSDK); ?>">Localization</a></li>
@@ -72,7 +72,7 @@ $cols = [
 
                 <ul class="margin-bottom">
                     <li><a href="/docs/realtime">Realtime</a></li>
-                    <li><a href="/docs/database">Database</a></li>
+                    <li><a href="/docs/databases">Databases</a></li>
                     <li><a href="/docs/storage">Storage</a></li>
                     <li><a href="/docs/functions">Functions</a></li>
                     <li><a href="/docs/keys">API Keys</a></li>
