Fix indentation in database guide

--- a/app/views/docs/database.phtml
+++ b/app/views/docs/database.phtml
@@ -426,7 +426,7 @@ func main() async throws {
     To ensure the best performance, Appwrite requires an index for every query.
     You can create an index by navigating to the <b>Indexes</b> tab of your collection or by using your favorite Server SDK. If you plan to query multiple attributes in a single query, you will need an index with <b>all</b> queried attributes.
 </p>
-<p>It should be noted that Appwrite's database was designed to protect your queries from performing a full-table scan as this is a footgun and could cause catastrophic performance degregation as you scale up your Appwrite project.</p>
+<p>It should be noted that Appwrite's database was designed to protect your queries from performing a full-table scan as this is a footgun and could cause catastrophic performance degradation as you scale up your Appwrite project.</p>
 <p>
     The following indexes are currently supported:
 </p>
